Petit correctif LSpacing

--- a/style.css
+++ b/style.css
@@ -1039,7 +1039,7 @@ button[type="submit"] {
 .text-center.hero-bloc-text.tc-white {
 
     color: #fff!important;
-    letter-spacing: 5px;
+    letter-spacing: 3px;
     
 }
 
